--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,14 @@ body{
     display: inline-block;
     text-align: center;
     color: #FFFFFF;
-    margin-right: 30px;
+    margin-left: 30px;
     text-align: right;
 }
 .text-box{
     position: absolute;
     text-align: left;
-    padding-top: 90px;
-    margin-top: 30px;
-
+    top:40%;
+    transform: translate(0% , -20%);
 }
 .heading-primary-main{
     display: block;
@@ -56,6 +55,7 @@ body{
     font-family: Libre Franklin;
     font-style: normal;
     font-weight:100;
+    color: #FFFFFF;
    
     
 }
@@ -63,13 +63,14 @@ body{
     display: block;
     font-style: normal;
     font-family: Libre Franklin;
-    font-weight: 400;
+    font-weight: 100;
     font-size: 24px;
     line-height: 29px;
     padding-bottom: 60px;
   
 }
 .text-box a{
+    
     color: #FFFFFF;
     font-family: Libre Franklin;
     font-style: normal;
